--- a/index.html
+++ b/index.html
@@ -1657,29 +1657,450 @@ console.log(timezone(dt)); // "India Standard Time"
 
 
 
-        <!DOCTYPE html>
-        <html>
+        <div>
+            <h3 class="question">
 
-        <head>
-            <title>Draw a Rectangle</title>
-            <style>
-            </style>
-        </head>
+                Write a JavaScript function to check whether an `input` is a string or not. Test Data :
+                console.log(is_string('w3resource'));
+                true
+                console.log(is_string([1, 2, 4, 0])); false
+            </h3>
 
-        <body>
-            <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
-                Your browser does not support the HTML Canvas Element.
-            </canvas>
-            <script>
-                var canvas = document.getElementById("myCanvas");
-                var ctx = canvas.getContext("2d");
-                ctx.fillStyle = "#FF0000";
-                ctx.fillRect(20, 20, 150);
-            </script>
-        </body>
+            <form id="form-108">
+                <input type="'text" placeholder="enter value" id="input-108">
 
-        </html>
+                <button type="'submit'">Submit</button>
+            </form>
 
+            <p id="answer-108">
+
+            </p>
+        </div>
+
+
+        <div>
+            <h3 class="=question">
+                Write a JavaScript function to check whether a string is blank or not. Test Data :
+                console.log(is_Blank(''));
+                console.log(is_Blank('abc'));
+                true false
+            </h3>
+            <form id="form-109">
+                <input type="'text" placeholder="enter value" id="input-109">
+
+                <button type="'submit'">Submit</button>
+            </form>
+
+            <p id="answer-109">
+
+            </p>
+        </div>
+
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to split a string and convert it into an array of words.
+                Test Data : console.log(string_to_array("Robin Singh")); ["Robin", "Singh"]
+            </h3>
+            <form id="form-110">
+                <input type="'text" placeholder="enter value" id="input-110">
+
+                <button type="'submit'">Submit</button>
+            </form>
+            <p id="answer-110">
+
+            </p>
+        </div>
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to convert a string in abbreviated form.
+                Test Data :
+                console.log(abbrev_name("Robin Singh")); // "Robin S."
+            </h3>
+            <form id="form-111">
+                <input type="text" placeholder="enter value" id="input-111">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-111"></p>
+        </div>
+
+        <!-- Question 112 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to hide email addresses to protect from unauthorized user.
+                Test Data :
+                console.log(protect_email("robin_singh@example.com")); // "robin...@example.com"
+            </h3>
+            <form id="form-112">
+                <input type="text" placeholder="enter value" id="input-112">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-112"></p>
+        </div>
+
+        <!-- Question 113 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to parameterize a string.
+                Test Data :
+                console.log(string_parameterize("Robin Singh from USA.")); // "robin-singh-from-usa"
+            </h3>
+            <form id="form-113">
+                <input type="text" placeholder="enter value" id="input-113">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-113"></p>
+        </div>
+
+        <!-- Question 114 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to capitalize the first letter of a string.
+                Test Data :
+                console.log(capitalize('js string exercises')); // "Js string exercises"
+            </h3>
+            <form id="form-114">
+                <input type="text" placeholder="enter value" id="input-114">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-114"></p>
+        </div>
+
+        <!-- Question 115 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to capitalize the first letter of each word in a string.
+                Test Data :
+                console.log(capitalize_Words('js string exercises')); // "Js String Exercises"
+            </h3>
+            <form id="form-115">
+                <input type="text" placeholder="enter value" id="input-115">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-115"></p>
+        </div>
+
+        <!-- Question 116 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function that takes a string which has lower and upper case letters as a parameter
+                and
+                converts upper case letters to lower case, and lower case letters to upper case.
+                Test Data :
+                console.log(swapcase('AaBbc')); // "aAbBC"
+            </h3>
+            <form id="form-116">
+                <input type="text" placeholder="enter value" id="input-116">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-116"></p>
+        </div>
+
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to convert a string into camel case.
+                Test Data :
+                console.log(camelize("JavaScript Exercises"));
+                console.log(camelize("JavaScript exercises"));
+                console.log(camelize("JavaScriptExercises"));
+                "JavaScriptExercises"
+                "JavaScriptExercises"
+                "JavaScriptExercises"
+            </h3>
+            <form id="form-117">
+                <input type="text" placeholder="enter value" id="input-117">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-117"></p>
+        </div>
+
+        <!-- Question 118 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to uncamelize a string.
+                Test Data :
+                console.log(uncamelize('helloWorld'));
+                console.log(uncamelize('helloWorld','-'));
+                console.log(uncamelize('helloWorld','_'));
+                "hello world"
+                "hello-world"
+                "hello_world"
+            </h3>
+            <form id="form-118">
+                <input type="text" placeholder="enter value" id="input-118">
+                <input type="text" placeholder="delimiter (optional)" id="delimiter-118">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-118"></p>
+        </div>
+
+        <!-- Question 119 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to concatenate a given string n times (default is 1).
+                Test Data :
+                console.log(repeat('Ha!'));
+                console.log(repeat('Ha!',2));
+                console.log(repeat('Ha!',3));
+                "Ha!"
+                "Ha!Ha!"
+                "Ha!Ha!Ha!"
+            </h3>
+            <form id="form-119">
+                <input type="text" placeholder="enter value" id="input-119">
+                <input type="number" placeholder="times (optional)" id="times-119">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-119"></p>
+        </div>
+
+        <!-- Question 120 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to insert a string within a string at a particular position (default is 1).
+                Test Data :
+                console.log(insert('We are doing some exercises.'));
+                console.log(insert('We are doing some exercises.','JavaScript '));
+                console.log(insert('We are doing some exercises.','JavaScript ',18));
+                "We are doing some exercises."
+                "JavaScript We are doing some exercises."
+                "We are doing some JavaScript exercises."
+            </h3>
+            <form id="form-120">
+                <input type="text" placeholder="main string" id="mainString-120">
+                <input type="text" placeholder="insert string (optional)" id="insertString-120">
+                <input type="number" placeholder="position (optional)" id="position-120">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-120"></p>
+        </div>
+
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to truncate a string if it is longer than the specified number of
+                characters.
+                Test Data :
+                console.log(text_truncate('We are doing JS string exercises.'));
+                console.log(text_truncate('We are doing JS string exercises.',19));
+                console.log(text_truncate('We are doing JS string exercises.',15,'!!'));
+                "We are doing JS string exercises."
+                "We are doing JS ..."
+                "We are doing !!"
+            </h3>
+            <form id="form-121">
+                <input type="text" placeholder="enter value" id="input-121">
+                <input type="number" placeholder="length (optional)" id="length-121">
+                <input type="text" placeholder="ending (optional)" id="ending-121">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-121"></p>
+        </div>
+
+        <!-- Question 122 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to chop a string into chunks of a given length.
+                Test Data :
+                console.log(string_chop('w3resource'));
+                console.log(string_chop('w3resource',2));
+                console.log(string_chop('w3resource',3));
+                ["w3resource"]
+                ["w3", "re", "so", "ur", "ce"]
+                ["w3r", "eso", "urc", "e"]
+            </h3>
+            <form id="form-122">
+                <input type="text" placeholder="enter value" id="input-122">
+                <input type="number" placeholder="length (optional)" id="length-122">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-122"></p>
+        </div>
+
+        <!-- Question 123 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to count the occurrence of a substring in a string.
+                Test Data :
+                console.log(count("The quick brown fox jumps over the lazy dog", 'the'));
+                Output : 2
+                console.log(count("The quick brown fox jumps over the lazy dog", 'fox', false));
+                Output : 1
+            </h3>
+            <form id="form-123">
+                <input type="text" placeholder="main string" id="mainString-123">
+                <input type="text" placeholder="substring" id="substring-123">
+                <input type="checkbox" id="caseSensitive-123"> Case Sensitive
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-123"></p>
+        </div>
+
+        <!-- Question 124 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to escape a HTML string.
+                Test Data :
+                console.log(escape_HTML( &lt; a href="javascript-string-exercise-17.php" target="_blank" &gt;));
+                Output :
+                "&lt;a href=&quot;javascript-string-exercise-17.php&quot; target=&quot;_blank&quot;&gt;"
+            </h3>
+            <form id="form-124">
+                <input type="text" placeholder="enter value" id="input-124">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-124"></p>
+        </div>
+
+        <!-- Question 125 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function that can pad (left, right) a string to get to a determined length.
+                Test Data :
+                console.log(formatted_string('0000',123,'l'));
+                console.log(formatted_string('00000000',123,''));
+                Output :
+                "0123"
+                "12300000"
+            </h3>
+            <form id="form-125">
+                <input type="text" placeholder="main string" id="mainString-125">
+                <input type="text" placeholder="pad string" id="padString-125">
+                <input type="text" placeholder="direction (l/r)" id="direction-125">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-125"></p>
+        </div>
+
+        <!-- Question 126 -->
+        <div>
+            <h3 class="question">
+                Write a JavaScript function to repeat a string a specified times.
+                Test Data :
+                console.log(repeat_string('a', 4));
+                console.log(repeat_string('a'));
+                Output :
+                "aaaa"
+                "Error in string or count."
+            </h3>
+            <form id="form-126">
+                <input type="text" placeholder="enter value" id="input-126">
+                <input type="number" placeholder="times" id="times-126">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-126"></p>
+        </div>
+
+        <div>
+            <h3 class="question"> Remove the first occurrence of a given 'search string' from a string.</h3>
+            <form id="form-127">
+                <input type="text" placeholder="Enter string" id="input-127">
+                <input type="text" placeholder="Enter search string" id="search-127">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-127"></p>
+        </div>
+
+        <div>
+            <h3 class="question"> Convert ASCII to Hexadecimal format.</h3>
+            <form id="form-128">
+                <input type="text" placeholder="Enter ASCII string" id="input-128">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-128"></p>
+        </div>
+
+        <div>
+            <h3 class="question"> Convert Hexadecimal to ASCII format.</h3>
+            <form id="form-129">
+                <input type="text" placeholder="Enter Hexadecimal string" id="input-129">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-129"></p>
+        </div>
+
+        <div>
+            <h3 class="question"> Find a word within a string.</h3>
+            <form id="form-130">
+                <input type="text" placeholder="Enter string" id="input-str-130">
+                <input type="text" placeholder="Enter word to find" id="word-130">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-130"></p>
+        </div>
+
+        <div>
+            <h3 class="question"> Check if a string ends with specified suffix.</h3>
+            <form id="form-131">
+                <input type="text" placeholder="Enter string" id="input-str-131">
+                <input type="text" placeholder="Enter suffix" id="suffix-131">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-131"></p>
+        </div>
+        <div>
+            <h3 class="question">132. Escape special characters for use in HTML.</h3>
+            <form id="form-132">
+                <input type="text" placeholder="Enter string" id="input-132">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-132"></p>
+        </div>
+
+        <div>
+            <h3 class="question">133. Remove non-printable ASCII characters.</h3>
+            <form id="form-133">
+                <input type="text" placeholder="Enter string" id="input-133">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-133"></p>
+        </div>
+
+        <div>
+            <h3 class="question">134. Remove non-word characters.</h3>
+            <form id="form-134">
+                <input type="text" placeholder="Enter string" id="input-134">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-134"></p>
+        </div>
+
+        <div>
+            <h3 class="question">135. Convert a string to title case.</h3>
+            <form id="form-135">
+                <input type="text" placeholder="Enter string" id="input-135">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-135"></p>
+        </div>
+
+        <div>
+            <h3 class="question">136. Remove HTML/XML tags from string.</h3>
+            <form id="form-136">
+                <input type="text" placeholder="Enter string with tags" id="input-136">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-136"></p>
+        </div>
+
+        <div>
+            <h3 class="question">137. Create a Zerofilled value with optional +, - sign.</h3>
+            <form id="form-137">
+                <input type="text" placeholder="Enter number" id="input-num-137">
+                <input type="number" placeholder="Enter width" id="input-width-137">
+                <input type="text" placeholder="Enter sign (+ or -)" id="input-sign-137">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-137"></p>
+        </div>
+
+        <div>
+            <h3 class="question">138. Test case insensitive string comparison.</h3>
+            <form id="form-138">
+                <input type="text" placeholder="Enter string 1" id="input-str1-138">
+                <input type="text" placeholder="Enter string 2" id="input-str2-138">
+                <button type="submit">Submit</button>
+            </form>
+            <p id="answer-138"></p>
+        </div>
 
     </section>
 
